# azero-tools-rs

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
azero_config/: Cargo.toml
azero_config/src/: lib.rs
azero_contract_event_indexer/: Cargo.toml  README.md
azero_contract_event_indexer/src/: lib.rs  main.rs  scraper.rs
azero_contract_event_indexer/src/event_db/: mod.rs
azero_contracts/: Cargo.toml
azero_contracts/src/: lib.rs  read.rs  storage.rs
azero_contracts/src/psp22/: balances.rs  mod.rs  psp22_wrapper.rs  read.rs
azero_runtime_types/: Cargo.toml
azero_runtime_types/metadata/: azero-runtime-69.scale  azero-runtime-73.scale
azero_runtime_types/src/: lib.rs
azero_universal/: Cargo.toml
azero_universal/src/: contract_events.rs  contract_info.rs  lib.rs
azero_webserver_psp22/: .gitignore  Cargo.toml
azero_webserver_psp22/metadata/: azero-12.0.scale
azero_webserver_psp22/src/: lib.rs  main.rs
azero_webserver_psp22/src/token_db/: mod.rs  serialization.rs  tracker.rs
azero_webserver_psp22/static/: styles.css
azero_webserver_psp22/templates/: account_details.html
common_indexer/: .gitignore  Cargo.toml  README.md
common_indexer/src/: lib.rs  main.rs  multiswaps.rs  pools.rs  psp_list.rs  scraper.rs  tokens.rs
common_indexer/src/event_db/: mod.rs
metadata/: azero-mainnet.scale
price_feed/: Cargo.toml
price_feed/src/: lib.rs  oracle_urls.json
psp22/: psp22.json
src/: contract_calls.rs  lib.rs  main.rs  storage_calls.rs
src/contracts/: events.rs  info.rs  mod.rs
src/psp22/: mod.rs  psp22_wrapper.rs
src/token_db/: mod.rs  serialization.rs  tracker.rs
src/webserver/: main.rs
static/: styles.css
templates/: account_details.html  db_summary.html
