[workspace]
members = [
    "azero_webserver_psp22",
    "azero_contract_event_indexer",
    "azero_config",
    "azero_runtime_types",
    "azero_universal",
    "azero_contracts",
    "common_indexer",
]

resolver = "2"

[workspace.package]
authors = ["Damian Straszak"]
edition = "2021"
version = "0.0.1"

[workspace.lints.rust]
bad_style = "deny"
improper_ctypes = "deny"
non_shorthand_field_patterns = "deny"
no_mangle_generic_items = "deny"
overflowing_literals = "deny"
path_statements = "deny"
patterns_in_fns_without_body = "deny"
unconditional_recursion = "deny"
unused_allocation = "deny"
unused_comparisons = "deny"
unused_parens = "deny"
unused_extern_crates = "deny"

[workspace.lints.clippy]
type_complexity = "allow"
all = "deny"

[workspace.dependencies]
subxt = {version = "0.34", features = ["jsonrpsee"]}
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }

codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false }
futures = { version = "0.3.27", default-features = false, features = ["std"] }
hex = "0.4.3"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
primitive-types = "0.12.2"
sp-core-hashing = "9.0.0"

azero_config = { path = "azero_config" }
azero_runtime_types = { path = "azero_runtime_types" }
azero_universal = { path = "azero_universal" }
azero_contracts = { path = "azero_contracts" }
azero_contract_event_indexer = { path = "azero_contract_event_indexer" }
common_indexer = { path = "common_indexer" }


anyhow = "1.0.75"
parking_lot = "0.12.1"
log = "0.4.20"
rand = "0.8.5"
env_logger = "0.10.0"
subxt-signer = "0.31.0"
tokio-stream = "0.1.14"
num-traits = "0.2.17"
chrono = "0.4.0"
