[package]
name = "azero_webserver_psp22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = {workspace = true,  features = ["jsonrpsee"]}
tokio = { workspace = true,  features = ["rt-multi-thread"] }

codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false }
futures = { version = "0.3.27", default-features = false, features = ["std"] }
hex = "0.4.3"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"

ink-wrapper-types = {version = "0.8.0", default-features = false }
ink_primitives = "4.2.1"


anyhow = "1.0.75"
parking_lot = "0.12.1"
log = "0.4.20"
rand = "0.8.5"
env_logger = "0.11.2"
bincode = "1.3.3"
axum = "0.7.4"
askama = "0.12.1"
tower-http = { version = "0.5.2", features = ["fs"] }
priority-queue = "1.3.2"

azero_config = { workspace = true }
azero_runtime_types = { workspace = true }
azero_universal = { workspace = true }
azero_contracts = { workspace = true }

