[package]
name = "azero_webserver_psp22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = {workspace = true,  features = ["jsonrpsee"]}
tokio = { workspace = true,  features = ["rt-multi-thread"] }

codec = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

anyhow = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
env_logger = { workspace = true }


azero_config = { workspace = true }
azero_runtime_types = { workspace = true }
azero_universal = { workspace = true }
azero_contracts = { workspace = true }


axum = {workspace = true}
askama = "0.12.1"
tower-http = { version = "0.5.2", features = ["fs"] }
priority-queue = "1.3.2"

