[package]
name = "common_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = {workspace = true,  features = ["jsonrpsee"]}
tokio = { workspace = true,  features = ["rt-multi-thread"] }

codec = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true

anyhow = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
env_logger = { workspace = true }
primitive-types = { workspace = true }

azero_config = { workspace = true }
azero_runtime_types = { workspace = true }
azero_universal = { workspace = true }
azero_contracts = { workspace = true }
azero_contract_event_indexer = { workspace = true }


axum = "0.7.4"
tower-http = { version = "0.5.2", features = ["fs"] }
rusqlite = "0.31.0"
serde_with = { version =  "3.8.1", features = ["hex"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"

