[package]
name = "price_feed"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true


[dependencies]

anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
parking_lot = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
paste = "1.0"
